--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,89 @@
 {
     "cSpell.words": [
+        "abaixo",
+        "abrange",
+        "acima",
+        "adequado",
+        "adiposo",
+        "agúa",
+        "alguém",
         "altura",
+        "analisamos",
+        "apenas",
+        "aponta",
+        "apresenta",
+        "aqui",
+        "aumentado",
         "Calcular",
+        "cálculo",
+        "caso",
+        "certa",
+        "conhecido",
+        "consideração",
+        "considerada",
+        "corpo",
+        "Criado",
+        "curtas",
+        "declarar",
+        "deve",
+        "diagnóstico",
+        "diferentes",
+        "dizer",
+        "Escola",
+        "está",
+        "estatura",
+        "exemplo",
+        "fatores",
+        "gordura",
         "grau",
+        "grávidas",
+        "Homems",
+        "importância",
+        "Índice",
+        "levar",
+        "limitações",
         "Magreza",
+        "matemático",
+        "medir",
+        "mulheres",
+        "Mulheres",
+        "Naturalmente",
+        "nossa",
+        "nosso",
+        "nunca",
+        "obesa",
         "Obesidade",
+        "Outro",
+        "outros",
+        "padrão",
+        "padrões",
+        "pela",
+        "pelo",
+        "permite",
+        "pernas",
+        "pessoa",
+        "pessoas",
+        "pode",
+        "porcentagem",
+        "porém",
+        "possuem",
+        "proporção",
+        "Proporção",
+        "quantidade",
+        "Quételet",
+        "Referências",
+        "resultado",
         "Saúde",
-        "sobrepeso"
+        "sigla",
+        "Significa",
+        "sobre",
+        "sobrepeso",
+        "suas",
+        "tecido",
+        "Tecido",
+        "terão",
+        "único",
+        "usado"
     ],
     "liveServer.settings.port": 5501
 }
