--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,10 +41,13 @@
         "importância",
         "Índice",
         "levar",
+        "Levemente",
         "limitações",
         "Magreza",
+        "Maior",
         "matemático",
         "medir",
+        "Menor",
         "mulheres",
         "Mulheres",
         "Naturalmente",
@@ -67,6 +70,7 @@
         "porcentagem",
         "porém",
         "possuem",
+        "prática",
         "proporção",
         "Proporção",
         "quantidade",
@@ -83,7 +87,8 @@
         "Tecido",
         "terão",
         "único",
-        "usado"
+        "usado",
+        "utilidade"
     ],
     "liveServer.settings.port": 5501
 }
